# cnpj-api

./: .env  .env.template  .env.test  .gitignore  .pylintrc  AzurePipeline2.yaml  Dockerfile  Makefile  README.md  docker-compose.test.yaml  docker-compose.yaml  pg_hba.conf  pyproject.toml  requirements.txt  requirements_dev.txt  sample_data.sql
.github/workflows/: pylint.yml
backend/: main.py
backend/api/: app.py  constants.py  main.py
backend/api/dependencies/: cnpj.py
backend/api/models/: base.py  cnpj.py
backend/api/routes/: cnpj.py  router_bundler.py  setup.py
backend/api/utils/: cnpj.py  misc.py
backend/app/: exceptions.py  main.py  rate_limiter.py
backend/app/api/: app.py  constants.py  exceptions.py  rate_limiter.py
backend/app/api/dependencies/: auth.py  cnpj.py  logs.py
backend/app/api/middlewares/: logs.py  misc.py
backend/app/api/models/: base.py  cnpj.py  logs.py  misc.py  scrapper.py  tasks.py
backend/app/api/repositories/: base.py  cnpj.py  constants.py  logs.py  tasks.py  types.py
backend/app/api/routes/: auth.py  cnpj.py  router_bundler.py  setup.py
backend/app/api/services/: cnpj.py  constants.py  scrapper.py
backend/app/api/utils/: cnpj.py  misc.py  ml.py
backend/app/database/: base.py  schemas.py
backend/app/database/models/: cnpj.py  logs.py
backend/app/repositories/: cnpj.py  constants.py  logs.py
backend/app/scheduler/: base.py  bundler.py
backend/app/scheduler/tasks/: bundler.py  logs.py  misc.py
backend/app/setup/: config.py  logging.py
backend/app/utils/: database.py  dataframe.py  errors.py  logging.py  misc.py  repositories.py  security.py
backend/database/: base.py
backend/lab/: cep_distance.py  clusters.json  elbow_results.json  main.ipynb
backend/repositories/: cnpj.py
backend/setup/: config.py  logging.py
backend/tests/: API - CNPJ - FastAPI.postman_collection.json  conftest.py  test_api_models_cnpj.py  test_api_routes_setup.py  test_api_utils_cnpj.py  test_api_utils_misc.py  test_api_utils_ml.py  test_database_base.py  test_utils_dataframe.py  test_utils_errors.py  test_utils_logging.py  test_utils_misc.py  test_utils_repositories.py
backend/utils/: dataframe.py  errors.py  logging.py  misc.py
data/: sample_data.sql
lab/: cep_distance.py  elbow_results.json  main.ipynb
scripts/: clean_packages.py  delete-stack-on-portainer.sh  deploy.sh  get-pip.py  parse_pylint_report.sh  push-stack-on-portainer.sh  push-to-dockerhub.sh  push_to_dockerhub.ps1  push_to_dockerhub.sh
stacks/: portainer.yaml  traefik.yaml
tests/: API - CNPJ.postman_collection.json  conftest.py  test_api_models_cnpj.py  test_api_routes_setup.py  test_api_utils_cnpj.py  test_database_base.py  test_utils_dataframe.py  test_utils_errors.py  test_utils_logging.py  test_utils_misc.py
