[tool.poetry]
name = "cnpj-api"
version = "0.0.1"
description = "API para consulta de CNPJ"
authors = ["Bruno Peixoto <brunolnetto@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.12"
bs4 = "^0.0.2"
fastapi = "0.111.0"
fastapi-limiter = "0.1.6"
lxml = "^5.2.2"
python-jose = "3.3.0"
nltk = "^3.8.1"
pandas = "^2.2.2"
psycopg2-binary = "^2.9.9"
pyarrow = "^16.1.0"
pydantic-settings = "2.3.4"
starlette = "^0.37.2"
SQLAlchemy = "^2.0.30"
SQLAlchemy-Utils = "^0.41.2"
typing-extensions = "^4.12.2"
python-dotenv = "^1.0.1"
python-json-logger = "^2.0.7"
sentry-sdk = "2.9.0"
toml = "0.10.2"
urllib3 = "^2.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
virtualenv = "^20.26.2"
pytest-mock = "^3.14.0"
pytest-watch = "^4.2.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
